# LaTeX_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/ast/: ast_arena.hpp  ast_info.hpp  ast_node.hpp  ast_visitor.hpp  node_registry.cpp
src/core/: core_registry.cpp  latex_core.hpp
src/lexer/: lexer.hpp  lexer_registry.cpp  token_info.hpp
src/parser/: parser.hpp  parser_registry.cpp
src/parser/data/: latex_commands.hpp  latex_commands_data.cpp  latex_info.hpp  latex_registry.cpp
src/parser/utility/: parser_primary.hpp  parser_primary_registry.cpp
src/sem_analyzer/: semantic_analyzer.hpp  semantic_analyzer_registry.cpp  semantic_dispatch_table.cpp
testing/: benchmark.cpp  main.cpp
